<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

/**
 * Class Colore
 *
 * @property $id
 * @property $codigo
 * @property $nombre
 * @property $created_at
 * @property $updated_at
 *
 * @property ImagenColore[] $imagenColores
 * @property Producto[] $productos
 * @package App
 * @mixin \Illuminate\Database\Eloquent\Builder
 */
class Colore extends Model
{


    protected $perPage = 10;

    /**
     * Attributes that should be mass-assignable.
     *
     * @var array
     */
    protected $fillable = ['codigo', 'nombre'];


    /**
     * @return \Illuminate\Database\Eloquent\Relations\HasMany
     */
    public function imagenColores()
    {
        return $this->hasMany(\App\Models\ImagenColore::class, 'color_id', 'id');
    }
    


    /**
     * @return \Illuminate\Database\Eloquent\Relations\HasMany
     */
    public function productos()
    {
        return $this->hasMany(\App\Models\Producto::class, 'id', 'id_colores');
    }
}
